--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,5 +1,27 @@
-{% extends "base.html" %}
-{% block title %}login{% endblock %}
-{% block content %}
-<h1> login </h1>
-{% endblock %}
+{% extends "base.html" %} {% block title %}login{% endblock %} {% block content
+%}
+<form method = "POST">
+    <h3 align="centre">Login</h3>
+    <div class="form-group">
+        <label for="email"> Email adress </label>
+        <input 
+        type="email" 
+        class="form-control" 
+        id="email" 
+        name="email"
+        placeholder="Enter email"/>
+    </div>
+    <div class="form-group">
+        <label for="password"> password </label>
+        <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        placeholder="Enter password"/>
+        </div>
+        <br />
+        <button type="submit" class="btn btn-primary"> login </button>
+
+</form>
+ {% endblock %}
