--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,5 +1,48 @@
 {% extends "base.html" %}
 {% block title %}signup{% endblock %}
 {% block content %}
-<h1> signup </h1>
+
+<form method = "POST">
+    <h3 align="centre">Sign Up</h3>
+    <div class="form-group">
+        <label for="email"> Email adress </label>
+        <input 
+        type="email" 
+        class="form-control" 
+        id="email" 
+        name="email"
+        placeholder="Enter email"/>
+    </div>
+    <div class="form-group">
+        <label for="first_name"> first_name </label>
+        <input 
+        type="text" 
+        class="form-control" 
+        id="first_name" 
+        name="first_name"
+        placeholder="Enter first name"/>
+    </div>
+    <div class="form-group">
+        <label for="last_name"> last_name </label>
+        <input 
+        type="text" 
+        class="form-control" 
+        id="last_name" 
+        name="last_name"
+        placeholder="Enter last_name"/>
+    </div>
+    <div class="form-group">
+        <label for="password1"> password </label>
+        <input
+        type="password"
+        class="form-control"
+        id="password1"
+        name="password1"
+        placeholder="Enter password"/>
+        </div>
+        <br />
+        <button type="submit" class="btn btn-primary"> Submit </button>
+
+</form>
+
 {% endblock %}
