used auth file and base html to add functionality to the signup page by adding flash messages

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %} {% block title %}login{% endblock %} {% block content
-%}
+{% extends "base.html" %} 
+{% block title %}login{% endblock %}
+{% block content %}
 <form method = "POST">
-    <h3 align="centre">Login</h3>
+    <h3 align="centre"> Login </h3>
     <div class="form-group">
         <label for="email"> Email adress </label>
         <input 
@@ -24,4 +25,4 @@
         <button type="submit" class="btn btn-primary"> login </button>
 
 </form>
- {% endblock %}
+{% endblock %}
