--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,18 @@
 {% extends "base.html" %}
 {% block title %}Change{% endblock %}
 {% block content %}
-<h1> Homepage </h1>
+
+<h1 align="centre">Notes</h1>
+<ul class="list-group list-group-flush" id="notes">
+    {% for note in user.notes %}
+    <li class="list-group-item">{{ note.data }}</li>
+    {% endfor %}
+</ul>
+<form method="POST">
+    <textarea name="note" id="note" class="form-control"></textarea>
+    <div align="centre">
+        <button type="submit" class="btn btn-primary mt-2">Save</button>
+    </div>
+</form>
+        
 {% endblock %}
