--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -83,6 +83,11 @@
             crossorigin="anonymous"
         ></script>
 
+        <script
+            type="text/javascript"
+            src="{{url_for('static',filename='index.js')}}"
+        ></script>
+
 
 
     </body>
